Publishing to gh-pages

--- a/404.html
+++ b/404.html
@@ -29,17 +29,17 @@
     
 
     <meta property="og:title" content="404 Page not found" />
-<meta property="og:description" content="Network of searchable leaks. A free software for investigative journalism." />
+<meta property="og:description" content="Network of searchable leaks. A free software for investigative journalism and eDiscovery." />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://uhh-lt.github.io/newsleak/404.html" />
 
 
 <meta itemprop="name" content="404 Page not found">
-<meta itemprop="description" content="Network of searchable leaks. A free software for investigative journalism.">
+<meta itemprop="description" content="Network of searchable leaks. A free software for investigative journalism and eDiscovery.">
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="404 Page not found"/>
-<meta name="twitter:description" content="Network of searchable leaks. A free software for investigative journalism."/>
+<meta name="twitter:description" content="Network of searchable leaks. A free software for investigative journalism and eDiscovery."/>
 
   </head>
 
