--- a/en/index.html
+++ b/en/index.html
@@ -32,17 +32,17 @@
     
 
     <meta property="og:title" content="En" />
-<meta property="og:description" content="Network of searchable leaks. A free software for investigative journalism." />
+<meta property="og:description" content="Network of searchable leaks. A free software for investigative journalism and eDiscovery." />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://uhh-lt.github.io/newsleak/en/" />
 
 
 <meta itemprop="name" content="En">
-<meta itemprop="description" content="Network of searchable leaks. A free software for investigative journalism.">
+<meta itemprop="description" content="Network of searchable leaks. A free software for investigative journalism and eDiscovery.">
 
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="En"/>
-<meta name="twitter:description" content="Network of searchable leaks. A free software for investigative journalism."/>
+<meta name="twitter:description" content="Network of searchable leaks. A free software for investigative journalism and eDiscovery."/>
 
   </head>
 
