Publishing to gh-pages

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
 <h2 id="collaboration">Collaboration</h2>
 
-<p>The new/s/leak project is a collaboration between Hamburg University (Department of <a href="https://lt.informatik.uni-hamburg.de/">language technology</a>), Darmstadt University (department of <a href="http://www.gris.informatik.tu-darmstadt.de/home/index.de.htm">information visualization</a>) and <a href="https://www.spiegel.de">Der Spiegel</a>. In 2016 and 2018, the project was funded by the <a href="https://www.volkswagenstiftung.de/">Volkswagenstiftung</a> as a part of the initiative “Science and Data Journalism”.</p>
+<p>The new/s/leak project is a collaboration between Hamburg University (Department of <a href="https://lt.informatik.uni-hamburg.de/">language technology</a>), Darmstadt University (department of <a href="https://www.gris.informatik.tu-darmstadt.de/home/index.de.htm">information visualization</a>) and <a href="https://www.spiegel.de">Der Spiegel</a>. In 2016 and 2018, the project was funded by the <a href="https://www.volkswagenstiftung.de/">Volkswagenstiftung</a> as a part of the initiative “Science and Data Journalism”.</p>
 
   </article>
   
